Closed Bug 369640 Opened 17 years ago Closed 17 years ago

ARIA multiselectable vs. multiselect naming mistake

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

References

(Blocks 1 open bug)

Details

(Keywords: access)

Attachments

(1 file)

I just noticed that for some roles we support the property called "multiselectable" and for others we call it "multiselect".

The ARIA states doc calls it "multiselectable"
http://www.w3.org/TR/aria-state/
I think we should support both and deprecate one, since our docs have said we support one or the other in different places.
Actually, no one's using this yet. I'm going to keep the code simple and just support the correct name.
Attachment #257856 - Flags: review?(david.bolter)
Comment on attachment 257856 [details] [diff] [review]
Use "multiselectable"

Looks good.
Attachment #257856 - Flags: review?(david.bolter) → review+
Made one extra change of kNameSpaceID_None to the WAI properties namespace.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: