Bug 369640. Fix ARIA multiselect -- the correct name is multiselectable. r=david.bolter