accessible/src/base/nsDocAccessible.cpp
@@ -964,12 +964,12 @@ nsDocAccessible::AttributeChanged(nsIDocument *aDocument, nsIContent* aContent,
     else if (aAttribute == nsAccessibilityAtoms::valuenow) {
       eventType = nsIAccessibleEvent::EVENT_VALUE_CHANGE;
     }
-    else if (aAttribute == nsAccessibilityAtoms::multiselect) {
+    else if (aAttribute == nsAccessibilityAtoms::multiselectable) {
       // This affects whether the accessible supports nsIAccessibleSelectable.
       // COM says we cannot change what interfaces are supported on-the-fly,
       // so invalidate this object. A new one will be created on demand.
       if (HasRoleAttribute(aContent)) {
-        // The multiselect and other waistate attributes only take affect
+        // The multiselectable and other waistate attributes only take affect
         // when dynamic content role is present
         InvalidateCacheSubtree(aContent, nsIAccessibleEvent::EVENT_REORDER);
       }
